fix: updating css for prevent problems on alignement between blocks

--- a/src/renderer/src/components/services/Service.module.css
+++ b/src/renderer/src/components/services/Service.module.css
@@ -1,4 +1,7 @@
 .containerPuzzle {
+  @apply flex flex-col justify-between;
   min-width: var(--compose-application-width);
   max-width: var(--compose-application-width);
+  min-height: calc(var(--compose-application-height) * 0.7);
+  max-height: calc(var(--compose-application-height) * 0.7);
 }
